Z-index issues

--- a/prop-13/css/styles.sass
+++ b/prop-13/css/styles.sass
@@ -875,7 +875,7 @@ video
 
 #spending-chart
   position: fixed
-  z-index: 4999
+  z-index: 2000
   width: 1040px
   height: 670px
   margin: 40px
